read mojang recipes from the server jar, to avoid reflection, and get the ACUTAL shape (not the hack bukkit uses)